--- a/package.json
+++ b/package.json
@@ -23,10 +23,11 @@
         "@fortawesome/vue-fontawesome": "^3.0.6",
         "@popperjs/core": "^2.11.8",
         "@vitejs/plugin-vue": "^4.5.2",
-        "chart.js": "^4.4.1",
+        "chart.js": "^4.4.3",
         "i18next": "^23.7.13",
         "lodash": "^4.17.21",
         "vue": "^3.2.36",
+        "vue-chartjs": "^5.3.1",
         "vue-i18n": "^9.8.0",
         "vue-router": "^4.2.5",
         "vuex": "^4.0.2"
