--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "chart.js": "^4.4.3",
         "i18next": "^23.7.13",
         "lodash": "^4.17.21",
+        "uuid": "^9.0.1",
         "vue": "^3.2.36",
         "vue-chartjs": "^5.3.1",
         "vue-i18n": "^9.8.0",
