--- a/composer.json
+++ b/composer.json
@@ -7,15 +7,14 @@
     "require": {
         "php": "^8.1",
         "darkaonline/l5-swagger": "^8.6",
-        "guzzlehttp/guzzle": "^7.2",
-        "irazasyed/telegram-bot-sdk": "^3.14",
+        "guzzlehttp/guzzle": "^7.8",
         "laravel/fortify": "^1.18",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
-        "noodlesnz/double-metaphone": "^1.0",
-        "predis/predis": "^2.2",
-        "voku/portable-ascii": "^2.0"
+        "php-ffmpeg/php-ffmpeg": "^1.2",
+        "voku/portable-ascii": "^2.0",
+        "irazasyed/telegram-bot-sdk": "^3.14"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
