--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,4 +24,4 @@ jobs:
             git pull
             cd ..
             docker-compose up -d --build
-            docker-compose exec bot-panel php artisan migrate --force
+            docker-compose exec bot_panel_php php artisan migrate --force
