--- a/composer.json
+++ b/composer.json
@@ -8,13 +8,14 @@
         "php": "^8.1",
         "darkaonline/l5-swagger": "^8.6",
         "guzzlehttp/guzzle": "^7.8",
+        "irazasyed/telegram-bot-sdk": "^3.14",
         "laravel/fortify": "^1.18",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
         "php-ffmpeg/php-ffmpeg": "^1.2",
-        "voku/portable-ascii": "^2.0",
-        "irazasyed/telegram-bot-sdk": "^3.14"
+        "predis/predis": "^2.3",
+        "voku/portable-ascii": "^2.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
