--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,17 +12,17 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Deploy to server via SSH
+      - name: Deploy via SSH
         uses: appleboy/ssh-action@v0.1.8
         with:
           host: ${{ secrets.SSH_HOST }}
           username: ${{ secrets.SSH_USER }}
           key: ${{ secrets.SSH_KEY }}
-
           script: |
+            export DOCKER_BUILDKIT=1
             cd /home/maxim/var/www/bot-panel/src
             git pull
             cd ..
             docker-compose up -d --build
-            docker builder prune --all --force
+            docker builder prune --filter "until=168h" --force
             docker-compose exec bot_panel_php php artisan migrate --force
