formated frontend code with prettier

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "scripts": {
         "dev": "vite",
         "build": "vite build",
-        "build-and-push": "npm run build && git add -A && git commit -m \"$COMMIT_MSG\" && git push"
+        "build-and-push": "npm run build && git add -A && git commit -m \"$COMMIT_MSG\" && git push",
+        "format": "prettier --write \"resources/js/src/**/*.{js,vue}\""
     },
     "devDependencies": {
         "autoprefixer": "^10.4.16",
