--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,3 @@
-# .github/workflows/deploy.yml
 name: Deploy bot-panel (host-runner)
 
 on:
@@ -7,12 +6,9 @@ on:
 
 jobs:
     deploy:
-        # рабочая машина — ваш self-hosted runner «maximserv»
-        runs-on: self-hosted     # хватит дефолтного лейбла; при желании можно
-        # указать runs-on: [self-hosted, Linux, X64]
+        runs-on: self-hosted
 
         steps:
-            # 1. синхронизируем прод-код с GitHub-ом
             - name: Git pull → /var/www/bot-panel/src
               run: |
                   cd /home/maxim/var/www/bot-panel/src
@@ -20,7 +16,6 @@ jobs:
                   git fetch origin main
                   git reset --hard origin/main
 
-            # 2. пересобираем и перезапускаем стек
             - name: Docker compose up --build
               working-directory: /home/maxim/var/www/bot-panel
               run: |
@@ -28,8 +23,6 @@ jobs:
                   docker compose up -d --build
                   docker builder prune --filter "until=168h" --force
 
-            # 3. миграции БД
             - name: Laravel migrate --force
               working-directory: /home/maxim/var/www/bot-panel
-                # -T → не ждать stdin
               run: docker compose exec -T bot_panel_php php artisan migrate --force
