--- a/composer.json
+++ b/composer.json
@@ -5,27 +5,27 @@
     "keywords": ["laravel", "framework"],
     "license": "MIT",
     "require": {
-        "php": "^8.1",
-        "darkaonline/l5-swagger": "^8.6",
+        "php": "^8.2",
         "guzzlehttp/guzzle": "^7.8",
         "irazasyed/telegram-bot-sdk": "^3.14",
-        "laravel/fortify": "^1.18",
-        "laravel/framework": "^10.10",
-        "laravel/sanctum": "^3.3",
+        "laravel/fortify": "^1.28",
+        "laravel/framework": "^12.0",
+        "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.8",
         "php-ffmpeg/php-ffmpeg": "^1.2",
         "predis/predis": "^2.3",
         "voku/portable-ascii": "^2.0"
     },
     "require-dev": {
+        "darkaonline/l5-swagger": "^9.0",
         "fakerphp/faker": "^1.9.1",
-        "larastan/larastan": "^2.9",
+        "larastan/larastan": "^3.5",
         "laravel/pint": "^1.22",
         "laravel/sail": "^1.18",
-        "mockery/mockery": "^1.4.4",
-        "nunomaduro/collision": "^7.0",
-        "phpstan/phpstan": "^1.12",
-        "phpunit/phpunit": "^10.1",
+        "mockery/mockery": "^1.6",
+        "nunomaduro/collision": "^8.7",
+        "phpstan/phpstan": "^2.1",
+        "phpunit/phpunit": "^11.0",
         "spatie/laravel-ignition": "^2.0"
     },
     "autoload": {
@@ -42,7 +42,7 @@
     },
     "scripts": {
         "post-autoload-dump": [
-            "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
+            "Illuminate\\\\Foundation\\\\ComposerScripts::postAutoloadDump",
             "@php artisan package:discover --ansi"
         ],
         "post-update-cmd": [
