--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,27 +1,44 @@
 name: Deploy bot-panel (host-runner)
 
 on:
-    push:
-        branches: [main]
+  push:
+    branches: [main]
 
 jobs:
-    deploy:
-        runs-on: self-hosted
+  deploy:
+    runs-on: self-hosted
 
-        steps:
-            - name: Git pull → /var/www/bot-panel/src
-              run: |
-                  cd /home/maxim/var/www/bot-panel/src
-                  git fetch origin main
-                  git reset --hard origin/main
+    steps:
+      - name: Git pull → /var/www/bot-panel/src
+        run: |
+          set -euo pipefail
+          cd /home/maxim/var/www/bot-panel/src
+          git fetch origin main
+          git reset --hard origin/main
 
-            - name: Docker compose up --build
-              working-directory: /home/maxim/var/www/bot-panel
-              run: |
-                  export DOCKER_BUILDKIT=1
-                  docker compose up -d --build
-                  docker builder prune --filter "until=168h" --force
+      - name: Docker compose up --build (+scale, recreate)
+        working-directory: /home/maxim/var/www/bot-panel
+        env:
+          DOCKER_BUILDKIT: "1"
+        run: |
+          set -euo pipefail
+          docker compose up -d --build --force-recreate --remove-orphans --scale bot_panel_queue_worker=4
+          docker builder prune --filter "until=168h" --force
 
-            - name: Laravel migrate --force
-              working-directory: /home/maxim/var/www/bot-panel
-              run: docker compose exec -T bot_panel_php php artisan migrate --force
+      - name: Wait for MySQL ready
+        working-directory: /home/maxim/var/www/bot-panel
+        run: |
+          set -euo pipefail
+          docker compose exec -T bot_panel_mysql sh -lc 'until mysqladmin ping -h 127.0.0.1 -p"$MYSQL_ROOT_PASSWORD" --silent; do sleep 1; done'
+
+      - name: Laravel migrate --force
+        working-directory: /home/maxim/var/www/bot-panel
+        run: |
+          set -euo pipefail
+          docker compose exec -T bot_panel_php php artisan migrate --force --no-interaction
+
+      - name: Graceful restart queue workers
+        working-directory: /home/maxim/var/www/bot-panel
+        run: |
+          set -euo pipefail
+          docker compose exec -T bot_panel_php php artisan queue:restart
