added token fields to csv

--- a/.env.example
+++ b/.env.example
@@ -61,6 +61,7 @@ VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 OPENAI_API_KEY_RU=
 OPENAI_API_KEY_EN=
 OPENAI_API_KEY_UA=
+OPENAI_API_KEY_FALLBACK=
 
 LOCAL_MODELS=false
 OPENAI_BASE_URL=https://api.openai.com
